EVA-125 fix: Se realiza correción en diferentes modales  con respecto uso de de la etiqueta form  y del agrupamiento de los elementos del formualrio con "form-group y "form-row""
Adicionalmente  se organizan los botones de cancelar y aceptar ("o el qeu aplique según el caso"), para mantener un estándar en toda la aplicación donde a la izquierda siempre va el botón de cancelar y que queden con la calse "btn-pills"

Se hacen otros ajsutesen el modal de aprobación de documentos donde se cambio el orden de los elementos del formulario como algunos textos.

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -145,3 +145,11 @@ position: relative;
 .form-group:last-child, .form-group:only-child {
     margin-bottom: 1.5rem;
 }
+
+.contenedor-con-borde{
+    border-color: #e0e0e0;
+    border-width: 1px;
+    border-style: solid;
+    padding: 10px;
+    border-radius: 4px;
+}
