--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/fa-regular.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/bootstrap-datepicker/bootstrap-datepicker.css' %}">
     <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/formplugins/smartwizard/smartwizard.css' %}">
-    <link rel="stylesheet" media="screen, print" href="{% static 'Proyectos/css/Contratos/configuracionesContratos.css' %}">
 {% endblock styles%}
 
 {% block main %}
@@ -178,7 +177,7 @@
                                                                 </div>
                                                             </div>
 
-                                                            <div class="conenedor_con_borde">
+                                                            <div class="contenedor-con-borde">
                                                                 <h4>Vigencias</h4>
                                                                 <div id="div_vigencias"></div>
                                                                 <div class="form-row">
@@ -226,7 +225,7 @@
 
                                                     <div id="step-4" class="">
                                                         <div id="form-step-3" data-toggle="validator">
-                                                            <div class="conenedor_con_borde" style="padding-bottom: 10px">
+                                                            <div class="contenedor-con-borde" style="padding-bottom: 10px">
                                                                 <div id="div_garantias"></div>
                                                                 <div class="form-row">
                                                                     <div class="form-group col-md-3">
