--- a/SGI/templates/SGI/CadenasAprobacion/detalle_cadena_aprobacion.html
+++ b/SGI/templates/SGI/CadenasAprobacion/detalle_cadena_aprobacion.html
@@ -26,10 +26,8 @@
             </div>
         {% endfor %}
         </div>
-        <div class="modal-footer p-t-0" style="align-items: end">
-            <div style="padding-left: 15px">
-                <button data-dismiss="modal" class="btn btn-danger btn-block">Cerrar</button>
-            </div>
+        <div class="modal-footer mt-0">
+            <button data-dismiss="modal" class="btn btn-danger btn-pills">Cerrar</button>
         </div>
     </div>
 </div>
