--- a/TalentoHumano/templates/TalentoHumano/_elements/_modal_cambiar_foto_perfil.html
+++ b/TalentoHumano/templates/TalentoHumano/_elements/_modal_cambiar_foto_perfil.html
@@ -20,10 +20,10 @@
                         <br>
                         <div class="form-row">
                             <div class="col-md-6">
-                                <button id="guardar" class="btn btn-primary btn-block">Guardar</button>
+                                <a href="javascript: cerrarModalCambiarFoto()" class="btn btn-danger btn-pills btn-block">Cancelar</a>
                             </div>
                             <div class="col-md-6">
-                                <a href="javascript: cerrarModalCambiarFoto()" class="btn btn-danger btn-block">Cancelar</a>
+                                <button id="guardar" class="btn btn-primary btn-pills btn-block">Guardar</button>
                             </div>
                         </div>
                     </div>
