--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
@@ -15,7 +15,7 @@
 {% endif %}
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-header p-b-0">
+            <div class="modal-header">
                 <h4 class="modal-title">
                     {% if opcion == 'editar' %}Editar Movimiento{% else %}Agregar Movimiento{% endif %}
                 </h4>
@@ -23,37 +23,40 @@
                     <span aria-hidden="true"><i class="fal fa-times"></i></span>
                 </button>
             </div>
-            <div class="modal-body p-b-0">
+            <div class="modal-body">
 
                 {% csrf_token %}
                 <input id="valores" name="valores" type="hidden" value="vacio">
 
-                    <div class="form-group">
-                        {% select_tag subtipos_movimientos 'subtipo_movimiento_id' 'Seleccione un subtipo de movimiento' texto_label="Subtipo de Movimiento" value=flujo_detalle.subtipo_movimiento_id required="" modal=True mensaje_validacion='Por favor seleccione un subtipo de movimiento.' invalido=errores.subtipo_movimiento %}
-                    </div>
-                    <div class="form-group">
-                        {% input_currency_tag 'valor' 'Valor' placeholder="Ingrese una Valor" required=""  decimales=False modal=True min="1" max="2147483647" value=flujo_detalle.valor mensaje_validacion='Por favor ingrese un valor.' invalido=errores.descripcion removeMaskOnSubmit=True %}
-                    </div>
-                    <div class="form-group">
-                        {% input_date_tag 'fecha_movimiento' 'Fecha de movimiento' placeholder="Seleccione una fecha" required="" modal=True autocomplete="off" value=flujo_detalle.fecha_movimiento  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_movimiento %}
-                    </div>
-
-                    {% if opcion == 'editar' %}
-                        <div class="form-group">
-                            {% input_textarea_tag 'comentarios' 'Comentarios' placeholder="Ingrese los comentarios" maxlength="100" required="" modal=True mensaje_validacion='Por favor ingrese los comentarios.' invalido=errores.comentarios %}
-                        </div>
-                    {% endif %}
-                </div>
                 <div class="form-row">
-                    <div class="modal-footer mt-1" style="padding-left: 280px">
-                        <div>
-                            <button id="guardar" type="submit" class="btn btn-primary btn-block">{% if opcion == 'editar' %} Actualizar {% else %} Agregar {% endif %}</button>
-                        </div>
-                        <div>
-                            <button data-dismiss="modal" class="btn btn-danger btn-block">Cancelar</button>
-                        </div>
+                    <div class="form-group col-12">
+                        {% select_tag subtipos_movimientos 'subtipo_movimiento_id' 'Seleccione un subtipo de movimiento' texto_label="Subtipo de Movimiento" value=flujo_detalle.subtipo_movimiento_id required="" mensaje_validacion='Por favor seleccione un subtipo de movimiento.' invalido=errores.subtipo_movimiento %}
                     </div>
                 </div>
+
+                <div class="form-row">
+                    <div class="form-group col-12">
+                        {% input_currency_tag 'valor' 'Valor' placeholder="Ingrese una Valor" required=""  decimales=False min="1" max="2147483647" value=flujo_detalle.valor mensaje_validacion='Por favor ingrese un valor.' invalido=errores.descripcion removeMaskOnSubmit=True %}
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-12">
+                        {% input_date_tag 'fecha_movimiento' 'Fecha de movimiento' placeholder="Seleccione una fecha" required="" autocomplete="off" value=flujo_detalle.fecha_movimiento  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_movimiento %}
+                    </div>
+                </div>
+                {% if opcion == 'editar' %}
+                    <div class="form-row">
+                        <div class="form-group col-12">
+                            {% input_textarea_tag 'comentarios' 'Comentarios' placeholder="Ingrese los comentarios" maxlength="100" required="" mensaje_validacion='Por favor ingrese los comentarios.' invalido=errores.comentarios %}
+                        </div>
+                    </div>
+                {% endif %}
+            </div>
+
+            <div class="modal-footer">
+                <button data-dismiss="modal" class="btn btn-danger btn-pills">Cancelar</button>
+                <button id="guardar" type="submit" class="btn btn-primary btn-pills">{% if opcion == 'editar' %} Actualizar {% else %} Agregar {% endif %}</button>
             </div>
         </div>
     </div>
