--- a/SGI/templates/SGI/AprobacionDocumentos/detalle_solicitud_aprobacion.html
+++ b/SGI/templates/SGI/AprobacionDocumentos/detalle_solicitud_aprobacion.html
@@ -35,10 +35,8 @@
             </div>
         {% endfor %}
         </div>
-        <div class="modal-footer p-t-0" style="align-items: end">
-            <div style="padding-left: 15px">
-                <button data-dismiss="modal" class="btn btn-danger btn-block">Cerrar</button>
-            </div>
+        <div class="modal-footer">
+            <button data-dismiss="modal" class="btn btn-danger btn-pills">Cerrar</button>
         </div>
     </div>
 </div>
