EVA-125 feat: Se mejora para que enel título del modal del detalle de un contrato no muestre el objeto del contrato(El cual puede ser muy largo) y en lugar de este muestre el año de este y el nombre del cliente.
Adicional se corrige el iciono qeu se mostraba en la pantalla de crear/editar contratos.

--- a/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
+++ b/Proyectos/templates/Proyectos/Contrato/_modal_contrato_detalle.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
         <div class="modal-header p-b-0">
             <h4 class="modal-title">
-                Detalle del Contrato: {{ contrato.numero_contrato }} - {{ contrato.objeto_del_contrato }}
+                Detalle del Contrato: {{ contrato.numero_contrato }} de {{ contrato.anho }} - {{ contrato.cliente }}
             </h4>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true"><i class="fal fa-times"></i></span>
