EVA-126 Feat: Se realizan las modificaciones para el uso de inputmask en vigencias

--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -183,7 +183,7 @@
                                                                         {% input_number_tag 'anho_vigencia' 'Año' placeholder="Ingrese el año de vigencia" min='2000' max="4000" onInput="validarLongitud(4,this)" required="" value=contrato.acta_parcial mensaje_validacion='Por favor ingrese el año (Mínimo año: 2000)' %}
                                                                     </div>
                                                                     <div class="form-group col-md-5">
-                                                                        {% input_number_tag 'valor_vigencia' 'Valor' placeholder="Ingrese el valor de vigencia" min='0' max="99999999999999.99" step="0.01" onInput="validarLongitud(16,this)" required="" value=contrato.liquidacion mensaje_validacion='Por favor ingrese un valor'  %}
+                                                                        {% input_currency_tag 'valor_vigencia' "Valor" placeholder="Ingrese el valor de vigencia" required="" min="0.01" max="9999999999.99" step="0.01" removeMaskOnSubmit=True %}
                                                                     </div>
                                                                     <div class="col-md-1" style="padding-top:30px">
                                                                         <a class="far fa-2x far fa-plus-circle" id="agregar_vigencia" href="#" onclick="agregarVigencia()" title="" data-original-title="Agregar Vigencia" style=""></a>
