EVA-126 Feat: Se realiza la correccion del estilo de was-validated Porque cuando se generaba la validación, se estaba agregando un espacio a los valores alineados a la derecha.

--- a/EVA/static/EVA/Plantilla/css/custom/generales.css
+++ b/EVA/static/EVA/Plantilla/css/custom/generales.css
@@ -8,11 +8,13 @@
 }
 
 .was-validated .form-control:invalid, .form-control.is-invalid {
+    padding-right: 14px;
     border-color:#ccc;
     background-image: none;
 }
 
 .was-validated .form-control:valid, .form-control.is-valid {
+    padding-right: 14px;
     border-color:#ccc;
     background-image: none;
 }
