EVA-126 Fix: Se corrige el error al ocultar y mostrar el selector de porcentaje valor Se habia quitado el id del elemento en html

--- a/Proyectos/templates/Proyectos/Contrato/crear-editar.html
+++ b/Proyectos/templates/Proyectos/Contrato/crear-editar.html
@@ -154,7 +154,7 @@
                                                                 <div class="form-group col-md-6">
                                                                     {% select_tag formas_de_pago 'forma_de_pago_id' 'Contraentrega y Satisfacción' primer_valor=True texto_label="Forma de Pago" required="" value=formas_pago.forma_pago  mensaje_validacion='Por favor seleccione una forma de pago' invalido=errores.forma_de_pago %}
                                                                 </div>
-                                                                <div class="form-group col-md-6">
+                                                                <div class="form-group col-md-6" id="aplica_porcentaje_valor">
                                                                     <p class="mb-0">Aplica:</p>
                                                                     <div class="contenedor-con-borde">
                                                                         <div class="form-row">
